--- a/Projets/01/01_project1/Objects/01_project1.build_log.htm
+++ b/Projets/01/01_project1/Objects/01_project1.build_log.htm
@@ -28,48 +28,49 @@ Project File Date:  03/14/2025
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Software\Keil5\Core\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_stm32f10x_md.s...
-compiling croutine.c...
+compiling event_groups.c...
 compiling list.c...
 compiling heap_4.c...
-compiling event_groups.c...
-compiling core_cm3.c...
-compiling stm32f10x_adc.c...
-compiling tasks.c...
-compiling stream_buffer.c...
-compiling queue.c...
-compiling timers.c...
-compiling stm32f10x_bkp.c...
-compiling port.c...
-compiling stm32f10x_exti.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_dma.c...
 compiling stm32f10x_can.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_dac.c...
-compiling misc.c...
-compiling stm32f10x_crc.c...
+compiling queue.c...
+compiling system_stm32f10x.c...
+compiling timers.c...
+compiling core_cm3.c...
+compiling croutine.c...
+compiling stream_buffer.c...
 compiling stm32f10x_dbgmcu.c...
+compiling port.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_crc.c...
+compiling tasks.c...
+compiling stm32f10x_bkp.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_cec.c...
+compiling stm32f10x_adc.c...
+compiling misc.c...
+compiling stm32f10x_dma.c...
 compiling stm32f10x_fsmc.c...
 compiling stm32f10x_flash.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_it.c...
-compiling stm32f10x_iwdg.c...
 compiling stm32f10x_gpio.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_rtc.c...
 compiling stm32f10x_sdio.c...
+compiling stm32f10x_pwr.c...
+compiling Bluet_to_wifi.c...
 compiling stm32f10x_rcc.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_it.c...
+compiling stm32f10x_i2c.c...
 compiling stm32f10x_spi.c...
 compiling stm32f10x_usart.c...
 compiling stm32f10x_wwdg.c...
-compiling stm32f10x_tim.c...
 compiling Delay.c...
 compiling UART1.c...
-compiling main.c...
-compiling UART2.c...
+compiling stm32f10x_tim.c...
 compiling UART3.c...
+compiling UART2.c...
+compiling main.c...
 linking...
-Program Size: Code=14572 RO-data=820 RW-data=120 ZI-data=19240  
+Program Size: Code=12248 RO-data=268 RW-data=128 ZI-data=18632  
 ".\Objects\01_project1.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -83,7 +84,7 @@ Package Vendor: Keil
   D:/Software/Keil5/Packs/Keil/STM32F1xx_DFP/2.4.1/Device/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
